updating swagger as per enpoints
